# databricks_personal

./: .coverage  .gitignore  README.md  databricks.yml  pyproject.toml  register_model.py  tasks.py  test_deployments.py
.claude/: settings.json  settings.local.json
resources/: registration_job.yml
src/: config.py  connect.py
src/adaptors/: huggingface_adaptor.py  mlflow_adaptor.py  sentiment_pyfunc.py  serving_adaptor.py  unity_catalog_adaptor.py
src/domain/: __init__.py  errors.py  models.py  ports.py  result.py  services.py
tests/: conftest.py  test_connectivity.py  test_mcp.py  test_model_serving.py
